# ledger-ironfish-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: python_tests_checks.yml
src/: accumulator.rs  buffer.rs  contex.rs  context.rs  main.rs  settings.rs  utils.rs
src/app_ui/: address.rs  menu.rs  sign.rs
src/handlers/: dkg_get_identity.rs  dkg_round_1.rs  dkg_round_2.rs  dkg_round_3.rs  get_public_key.rs  get_version.rs  sign_tx.rs
tests/: test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_version_cmd.py
tests/application_client/: boilerplate_command_sender.py  boilerplate_transaction.py
tests_zemu/: package.json
tests_zemu/tests/: common.ts  dkg.test.ts  standard.test.ts
